5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4150/executions/1674_1100.log
== TEST (2019-04-25 10:56:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a = int(input("valor da cedula: "))

if (a > 100) and (a < 0):
	print("Animal : inavalido")
	
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:58:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a = int(input("valor da cedula: "))

print("entrada:" , a , ")

if (a > 100) and (a < 0):
	print("Animal : inavalido")
	
-- ERROR:
File "XXXX", line 7
    print("entrada:" , a , ")
                            ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:59:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a = int(input("valor da cedula: "))

print("entrada:" , "a") 

if (a > 100) and (a < 0):
	print("Animal : inavalido")
	
-- OUTPUT:
entrada: a
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:00:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a = int(input("valor da cedula: "))

print("entrada:" , " a ") 

if (a > 100) and (a < 0):
	print("Animal : inavalido")
	
-- OUTPUT:
entrada:  a
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:01:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a = int(input("valor da cedula: "))

print("entrada:" , a, ") 

if (a > 100) and (a < 0):
	print("Animal : inavalido")
	
-- ERROR:
File "XXXX", line 7
    print("entrada:" , a, ") 
                            ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:02:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a = int(input("valor da cedula: "))

print("entrada:" , a "") 

if (a > 100) and (a < 0):
	print("Animal : inavalido")
	
-- ERROR:
File "XXXX", line 7
    print("entrada:" , a "") 
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:02:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a = int(input("valor da cedula: "))

print("entrada:" , a ) 

if (a > 100) and (a < 0):
	print("Animal : inavalido")
	
-- OUTPUT:
entrada: 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:02:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a = int(input("valor da cedula: "))

print("entrada:" , a ) 

if (a > 100) or (a < 0):
	print("Animal : inavalido")
	
-- OUTPUT:
entrada: 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:03:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a = int(input("valor da cedula: "))

print("entrada:" , a ) 

	if (a > 100) or (a < 0):
		print("Animal : inavalido")
	
-- ERROR:
File "XXXX", line 9
    if (a > 100) or (a < 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:03:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a = int(input("valor da cedula: "))

print("entrada:" , a ) 

if (a > 100) or (a < 0):
	print("Animal : invalido")
	
-- OUTPUT:
entrada: 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:03:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a = int(input("valor da cedula: "))

print("entrada:" , a ) 

if (a > 100) or (a < 0):
	print("Animal : invalido")
	
-- OUTPUT:
entrada: 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:08:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a = int(input("valor da cedula: "))

print("Entrada:" , a ) 

if (a > 100) or (a < 0):
	print("Animal : invalido")
else:
	if (a == 2):
		print("Animal: Tartaruga")
	else:
		if (a==5):
			print("Animal: Garça")
		else:
			if(a==10):
				print("Animal: Mico-leao-dourado")
			else:
				if(a==50):
					print("Animal: Onça Pintada")
				else:
					if(a==100):
					print("Animal: Garoupa")
					
	
-- ERROR:
File "XXXX", line 25
    print("Animal: Garoupa")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:08:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a = int(input("valor da cedula: "))

print("Entrada:" , a ) 

if (a > 100) or (a < 0):
	print("Animal : invalido")
else:
	if (a == 2):
		print("Animal: Tartaruga")
	else:
		if (a==5):
			print("Animal: Garça")
		else:
			if(a==10):
				print("Animal: Mico-leao-dourado")
			else:
				if(a==50):
					print("Animal: Onça Pintada")
				else:
					if(a==100):
						print("Animal: Garoupa")
					
	
-- EXECUTION TIME:
0.146369
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:08:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a = int(input("valor da cedula: "))

print("Entrada:" , a ) 

if (a > 100) or (a < 0):
	print("Animal : invalido")
else:
	if (a == 2):
		print("Animal: Tartaruga")
	else:
		if (a==5):
			print("Animal: Garça")
		else:
			if(a==10):
				print("Animal: Mico-leao-dourado")
			else:
				if(a==50):
					print("Animal: Onça Pintada")
				else:
					if(a==100):
						print("Animal: Garoupa")
					
	
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:08:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a = int(input("valor da cedula: "))

print("Entrada:" , a ) 

if (a > 100) or (a < 0):
	print("Animal : invalido")
else:
	if (a == 2):
		print("Animal: Tartaruga")
	else:
		if (a==5):
			print("Animal: Garça")
		else:
			if(a==10):
				print("Animal: Mico-leao-dourado")
			else:
				if(a==50):
					print("Animal: Onça Pintada")
				else:
					if(a==100):
						print("Animal: Garoupa")
					
	
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:09:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a = int(input("valor da cedula: "))

print("Entrada:" , a ) 

if (a > 100) or (a < 0):
	print("Animal : invalido")
else:
	if (a == 2):
		print("Animal: Tartaruga")
	else:
		if (a==5):
			print("Animal: Garça")
		else:
			if(a==10):
				print("Animal: Mico-leao-dourado")
			else:
				if(a==50):
					print("Animal: Onça Pintada")
				else:
					if(a==100):
						print("Animal: Garoupa")
					
	
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:10:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a = int(input("valor da cedula: "))

print("Entrada:" , a ) 

if (a > 100) or (a < 0):
	print("Animal : invalido")
elif (a == 2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garça")
elif(a==10):
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Animal: Onça Pintada")
elif (a==100):
	print("Animal: Garoupa")
					
	
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:11:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a = int(input("valor da cedula: "))

print("Entrada:" , a ) 

if (a > 100) or (a < 0):
	print("Animal : invalido")
elif (a == 2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garça")
elif(a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal : Mico-leao-dourado")
elif(a==50):
	print("Animal: Onça-Pintada")
elif (a==100):
	print("Animal: Garoupa")
					
	
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:11:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a = int(input("valor da cedula: "))

print("Entrada:" , a ) 

if (a > 100) or (a < 0):
	print("Animal : invalido")
elif (a == 2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garça")
elif(a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal : Mico-leao-dourado")
elif(a==50):
	print("Animal: Onça-Pintada")
elif (a==100):
	print("Animal: Garoupa")
					
	
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:12:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a = int(input("valor da cedula: "))

print("Entrada:" , a ) 

if (a > 100) or (a < 0):
	print("Animal : invalido")
elif (a == 2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garça")
elif(a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal : Mico-leao-dourado")
elif(a==50):
	print("Animal: Onça-Pintada")
elif (a==100):
	print("Animal: Garoupa")
					
	
-- EXECUTION TIME:
0.142572
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:12:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a = int(input("valor da cedula: "))

print("Entrada:" , a ) 

if (a > 100) or (a < 0):
	print("Animal : invalido")
elif (a == 2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garça")
elif(a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal : Mico-leao-dourado")
elif(a==50):
	print("Animal: Onça-Pintada")
elif (a==100):
	print("Animal: Garoupa")
					
	
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:12:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a = int(input("valor da cedula: "))

print("Entrada:" , a ) 

if (a > 100) or (a < 0):
	print("Animal : invalido")
elif (a == 2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garça")
elif(a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal : Mico-leao-dourado")
elif(a==50):
	print("Animal: Onça-Pintada")
elif (a==100):
	print("Animal: Garoupa")
					
	
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:12:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a = int(input("valor da cedula: "))

print("Entrada:" , a ) 

if (a > 100) or (a < 0):
	print("Animal : invalido")
elif (a == 2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garça")
elif(a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal : Mico-leao-dourado")
elif(a==50):
	print("Animal: Onça-Pintada")
elif (a==100):
	print("Animal: Garoupa")
					
	
-- EXECUTION TIME:
0.207894
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:12:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a = int(input("valor da cedula: "))

print("Entrada:" , a ) 

if (a > 100) or (a < 0):
	print("Animal : invalido")
elif (a == 2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garça")
elif(a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal : Mico-leao-dourado")
elif(a==50):
	print("Animal: Onça-Pintada")
elif (a==100):
	print("Animal: Garoupa")
					
	
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:12:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a = int(input("valor da cedula: "))

print("Entrada:" , a ) 

if (a > 100) or (a < 0):
	print("Animal : invalido")
elif (a == 2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garça")
elif(a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal : Mico-leao-dourado")
elif(a==50):
	print("Animal: Onça-Pintada")
elif (a==100):
	print("Animal: Garoupa")
					
	
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:13:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a = int(input("valor da cedula: "))

print("Entrada:" , a ) 

if (a > 100) or (a < 0):
	print("Animal : invalido")
elif (a == 2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal : Mico-leao-dourado")
elif(a==50):
	print("Animal: Onça-Pintada")
elif (a==100):
	print("Animal: Garoupa")
					
	
-- EXECUTION TIME:
0.125847
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
valor da cedula: Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
valor da cedula: Entrada: 7
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
valor da cedula: Entrada: 50
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:13:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a = int(input("valor da cedula: "))

print("Entrada:" , a ) 

if (a > 100) or (a < 0):
	print("Animal : invalido")
elif (a == 2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal : Mico-leao-dourado")
elif(a==50):
	print("Animal: Onça-Pintada")
elif (a==100):
	print("Animal: Garoupa")
					
	
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:13:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a = int(input("valor da cedula: "))

print("Entrada:" , a ) 

if (a > 100) or (a < 0):
	print("Animal : invalido")
elif (a == 2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal : Mico-leao-dourado")
elif(a==50):
	print("Animal: Onca-Pintada")
elif (a==100):
	print("Animal: Garoupa")
					
	
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:13:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a = int(input("valor da cedula: "))

print("Entrada:" , a ) 

if (a > 100) or (a < 0):
	print("Animal : invalido")
elif (a == 2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal : Mico-leao-dourado")
elif(a==50):
	print("Animal: Onca-Pintada")
elif (a==100):
	print("Animal: Garoupa")
					
	
-- EXECUTION TIME:
0.204336
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-Pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:13:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a = int(input("valor da cedula: "))

print("Entrada:" , a ) 

if (a > 100) or (a < 0):
	print("Animal : invalido")
elif (a == 2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal : Mico-leao-dourado")
elif(a==50):
	print("Animal: Onca-Pintada")
elif (a==100):
	print("Animal: Garoupa")
					
	
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:14:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a = int(input("valor da cedula: "))

print("Entrada:" , a ) 

if (a > 100) or (a < 0):
	print("Animal : invalido")
elif (a == 2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal : Mico-leao-dourado")
elif(a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	print("Animal: Garoupa")
					
	
-- EXECUTION TIME:
0.170036
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:14:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a = int(input("valor da cedula: "))

print("Entrada:" , a ) 

if (a > 100) or (a < 0):
	print("Animal : invalido")
elif (a == 2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal : Mico-leao-dourado")
elif(a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	print("Animal: Garoupa")
					
	
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:15:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a = int(input("valor da cedula: "))

print("Entrada:" , a ) 

if (a > 100) or (a < 0):
	print("Animal : invalido")
elif (a == 2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal : Mico-leao-dourado")
elif(a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	print("Animal: Garoupa")
					
	
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:16:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a = int(input("valor da cedula: "))

print("Entrada:" , a ) 

if (a > 100) or (a < 0):
	print("Animal : invalido")
elif (a == 2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal : Mico-leao-dourado")
elif(a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:16:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a = int(input("valor da cedula: "))

print("Entrada:" , a ) 

if (a > 100) or (a < 0):
	print("Animal : invalido")
elif (a == 2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal : Mico-leao-dourado")
elif(a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:17:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a = int(input("valor da cedula: "))

print("Entrada:" , a ) 

if (a > 100) or (a < 0):
	print("Animal : invalido")
elif (a == 2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal : Mico-leao-dourado")
elif(a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:17:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a = int(input("valor da cedula: "))

print("Entrada:" , a ) 

if (a > 100) or (a < 0):
	print("Animal : invalido")
elif (a == 2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal : Mico-leao-dourado")
elif(a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	
-- EXECUTION TIME:
0.166505
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:19:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a = int(input("valor da cedula: "))

print("Entrada:" , a ) 

if (a > 100) or (a < 0):
	print("Animal : invalido")
elif (a == 2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal : Mico-leao-dourado")
elif(a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	
-- EXECUTION TIME:
0.206883
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:19:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a = int(input("valor da cedula: "))

print("Entrada:" , a ) 

if (a > 100) or (a < 0):
	print("Animal : invalido")
elif (a == 2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal : Mico-leao-dourado")
elif(a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:19:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a = int(input("valor da cedula: "))

print("Entrada:" , a ) 

if (a > 100) or (a < 0):
	print("Animal : invalido")
elif (a == 2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal : Mico-leao-dourado")
elif(a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")
	
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:19:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a = int(input("valor da cedula: "))

print("Entrada:" , a ) 

if (a > 100) or (a < 0):
	print("Animal : invalido")
elif (a == 2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal : Mico-leao-dourado")
elif(a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
	
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:20:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

a = int(input("valor da cedula: "))

print("Entrada:" , a ) 

if (a > 100) or (a < 0):
	print("Animal : invalido")
elif (a == 2):
	print("Animal: Tartaruga")
elif (a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif (a==20):
	print("Animal : Mico-leao-dourado")
elif(a==50):
	print("Animal: Onca-pintada")
elif (a==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
	
-- EXECUTION TIME:
0.14454
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
